fix pages issue

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <h2>Featured Projects</h2>
 
     <div class="project">
-        <h3><a href="pumpkin-raymarch/pumpkin-raymarching.html">Perlin and Pumpkins</a> — Implicit Rendering</h3>
+        <h3><a href="pumpkin-raymarching/pumpkin-raymarching.html">Perlin and Pumpkins</a> — Implicit Rendering</h3>
         <p>
           A fragment-shader-based scene featuring procedurally generated terrain, a day-night lighting cycle, and pumpkins. Use A/D to rotate the camera.
         </p>
       
         <p><em>Tech:</em> WebGL, FBM/Perlin Noise, SDF + Raymarched Implicit Rendering</p>
       
-        <img src="pumpkin-raymarch/demo.png" alt="Perlin and Pumpkins Screenshot">
+        <img src="pumpkin-raymarching/demo.png" alt="Perlin and Pumpkins Screenshot">
     </div>
 
     <div class="project">
